src/generated/big_384_29.h

typedef chunk BIG_384_29[NLEN_384_29+2];   /**< Define type BIG as array of chunks */
typedef chunk DBIG_384_29[DNLEN_384_29+2]; /**< Define type DBIG as array of chunks */
typedef chunk BIG_384_29[NLEN_384_29];     /**< Define type BIG as array of chunks */
typedef chunk DBIG_384_29[DNLEN_384_29];   /**< Define type DBIG as array of chunks */
/**	@brief Outputs a BIG number to the console
 *
	@param x a BIG number
 */
extern void BIG_384_29_output(BIG_384_29 x);
/**	@brief Convert from BIG number to byte array
 *
	@param a byte array
	@param x BIG number
 */
extern void BIG_384_29_toBytes(char *a,BIG_384_29 x);
/**	@brief Copy BIG from Read-Only Memory to a BIG
 *
	@param x BIG number
	@param y BIG number in ROM
 */
extern void BIG_384_29_rcopy(BIG_384_29 x,const BIG_384_29 y);
/**	@brief Copy BIG to another BIG
 *
	@param x BIG number
	@param y BIG number to be copied
 */
extern void BIG_384_29_copy(BIG_384_29 x,BIG_384_29 y);
/**	@brief Shifts a BIG left by any number of bits - input must be normalised, output normalised
 *
	@param x BIG number to be shifted
	@param s Number of bits to shift
 */
extern void BIG_384_29_shl(BIG_384_29 x,int s);
/**	@brief Fast shifts a BIG left by a small number of bits - input must be normalised, output will be normalised
 *
	The number of bits to be shifted must be less than BASEBITS
	@param x BIG number to be shifted
	@param s Number of bits to shift
	@return Overflow bits
 */
extern int BIG_384_29_fshl(BIG_384_29 x,int s);
/**	@brief Shifts a DBIG left by any number of bits - input must be normalised, output normalised
 *
	@param x DBIG number to be shifted
	@param s Number of bits to shift
 */
extern void BIG_384_29_dshl(DBIG_384_29 x,int s);
/**	@brief Shifts a BIG right by any number of bits - input must be normalised, output normalised
 *
	@param x BIG number to be shifted
	@param s Number of bits to shift
 */
extern void BIG_384_29_shr(BIG_384_29 x,int s);
/**	@brief Fast shifts a BIG right by a small number of bits - input must be normalised, output will be normalised
 *
	The number of bits to be shifted must be less than BASEBITS
	@param x BIG number to be shifted
	@param s Number of bits to shift
	@return Shifted out bits
 */
extern int BIG_384_29_fshr(BIG_384_29 x,int s);
/**	@brief Normalizes a BIG number - output normalised
 *
	All digits of the input BIG are reduced mod 2^BASEBITS
	@param x BIG number to be normalised
 */
extern chunk BIG_384_29_norm(BIG_384_29 x);
/**	@brief Compares two BIG numbers. Inputs must be normalised externally
 *
	@param x first BIG number to be compared
	@param y second BIG number to be compared
	@return -1 is x<y, 0 if x=y, 1 if x>y
 */
extern int BIG_384_29_comp(BIG_384_29 x,BIG_384_29 y);
/**	@brief Calculate number of bits in a BIG - output normalised
 *
	@param x BIG number
	@return Number of bits in x
 */
extern int BIG_384_29_nbits(BIG_384_29 x);
/**	@brief  x=y mod n - output normalised
 *
	Slow but rarely used. y is destroyed.
	@param x BIG number, on exit = y mod n
	@param y DBIG number
	@param n Modulus
 */
extern void BIG_384_29_dmod(BIG_384_29 x,DBIG_384_29 y,BIG_384_29 n);
/**	@brief  return parity of BIG, that is the least significant bit
 *
	@param x BIG number
	@return 0 or 1
 */
extern int BIG_384_29_parity(BIG_384_29 x);
/**	@brief  Calculate jacobi Symbol (x/y)
 *
	@param x BIG number
	@param y BIG number
	@return Jacobi symbol, -1,0 or 1
 */
extern int BIG_384_29_jacobi(BIG_384_29 x,BIG_384_29 y);